tweaks to get proxy working

--- a/AngularApp/angular.json
+++ b/AngularApp/angular.json
@@ -70,7 +70,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "AngularApp:build",
-            "proxyConfig": "proxy.conf.json"
+            "proxyConfig": "proxy.conf.json",
+            "host": "0.0.0.0"
           },
           "configurations": {
             "production": {
